<resources>
    <string name="app_name">Cidade Iluminada</string>

    <string name="title_activity_protocolo">Nova denúncia</string>
    <string name="label_abrir_novo_protocolo">Denunciar</string>
    <string name="label_action_novo_protocolo">Enviar Protocolo</string>

    <string name="title_activity_settings">Configurações</string>
    <string name="label_abrir_settings">Configurações</string>
    <string name="label_action_settings">Configurações</string>

    <string name="title_activity_protocolos_lista">Consultar Protocolos</string>
    <string name="label_abrir_lista_protocolos">Consultar</string>

    <string name="content_description_button_camera">Nova foto</string>
    <string name="label_button_protocolo_galeria">Galeria</string>
    <string name="label_button_protocolo_escolher_lugar">Selecionar lugar</string>

    <string name="label_descricao_protocolo"> Descrição:</string>
    <string name="label_protocolo_secao_endereco">Endereço</string>
    <string name="label_protocolo_endereco_cep">CEP</string>
    <string name="label_protocolo_endereco_bairro">Bairro</string>
    <string name="label_protocolo_endereco_rua">Rua</string>
    <string name="label_protocolo_endereco_numero">Número</string>

    <string name="title_activity_protocolo_detalhe">Detalhes Denúncia</string>

    <string name="hint_cep">12210–090</string>
    <string name="hint_bairro">Centro</string>
    <string name="hint_rua">Praça Afonso Pena</string>
    <string name="hint_numero">59</string>

    <string name="protocolo_envio_sucesso">Protocolo enviado com sucesso</string>
    <string name="protocolo_envio_erro">Houve um erro na comunicação com o servidor. Por favor, tente novamente mais tarde</string>
    <string name="erro_formulario_protocolo">Existem erros no preenchimento do formulário</string>
    <string name="erro_criacao_arquivo_foto">Erro ao criar o arquivo da foto</string>

    <string name="pref_modo_anonimo">Modo anônimo</string>
    <string name="pref_email">E-Mail</string>
    <string name="pref_cep">CEP Padrão</string>
    <string name="pref_nome">Nome</string>
    <string name="pref_rede_celular">Usar dados celular</string>
    <string name="sumario_pref_rede_celular_on">Envia protocolos usando Wi-Fi e rede móvel de dados</string>
    <string name="sumario_pref_rede_celular_off">Envia protocolos somente usando rede Wi-Fi</string>
    <string name="label_botao_pegar_endereco">Pegar endereço</string>
    <string name="lista_protocolos_vazia">Protocolos que você fez irão ser listados aqui. Para iniciar, selecione Fazer Denúncia no menu principal</string>
    <string name="content_description_foto_protocolo">Foto protocolo</string>
    <string name="label_situacao_protocolo">Situação:</string>
    <string name="label_data_protocolo">Criado em:</string>
    <string name="logo_cidade_iluminada_description">Logo Cidade Iluminada</string>
    <string name="label_cod_protocolo">Código:</string>
    <string name="label_action_atualizar_protocolo">Atualizar Protocolo</string>
    <string name="enviar_fail_rede_celular">Não é possível enviar protocolo pela rede celular. Verifique as suas configurações</string>
    <string name="protocolo_atualiza_fail">Erro ao atualizar o protocolo</string>
    <string name="protocolo_atualiza_success">Protocolo atualizado com sucesso</string>
</resources>
