<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/branca"
    tools:context="br.com.bilac.tcm.cidadeiluminada.protocolos.ProtocoloActivity">


    <!-- IMAGEM DE EXEMPLO -->
    <ImageButton
        android:id="@+id/openCameraButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:background="@color/branca"
        android:src="@drawable/foto_exemplo_cidade"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="openProtocoloCamera"
        android:contentDescription="@string/content_description_button_camera" />



    <!-- PROTOCOLO -->
    <TextView
        android:id="@+id/descricaoProtocoloLabel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/altura_linha"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Protocolos:"
        android:textSize="18dp"
        android:textColor="@color/cinza"
        android:hint="12228-600"
        android:layout_below="@+id/openCameraButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/altura_linha"
        android:layout_toEndOf="@+id/descricaoProtocoloLabel"
        android:layout_alignBottom="@+id/descricaoProtocoloLabel"
        android:layout_marginLeft="10dp"
        android:text="54321" />

    <!-- END PROTOCOLO -->

    <!--  DESCRIÇÃO -->
    <TextView
        android:id="@+id/conteudoDescricao"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/protocoloDescricaoEditText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Descrição:"
        android:textSize="18dp"
        android:textColor="@color/cinza"
        android:hint="12228-600"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/altura_linha"
        android:layout_toEndOf="@+id/conteudoDescricao"
        android:layout_alignTop="@+id/conteudoDescricao"
        android:layout_alignBaseline="@+id/conteudoDescricao"
        android:layout_marginLeft="10dp"
        android:text="Lorem Ipsum Dolor Sit Amet"

        />


    <!-- END DESCRIÇÃO -->


    <TextView
        android:id="@+id/protocoloDescricaoEditText"
        android:layout_width="100dp"
        android:layout_height="@dimen/altura_linha"
        android:layout_below="@+id/descricaoProtocoloLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/descricaoProtocoloLabel"
        android:linksClickable="false" />

    <Button
        android:id="@+id/openGalleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button_protocolo_galeria"
        android:layout_below="@+id/openCameraButton"
        android:layout_alignStart="@+id/openCameraButton"
        android:layout_alignEnd="@+id/openCameraButton"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />


    <!--  LOCALIZAÇÃO E ICONE -->
    <TextView
        android:id="@+id/enderecoProtocoloLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="  Localização"
        android:drawableStart="@drawable/ic_map_marker_radius_black_24dp"
        android:textColor="@color/cinza"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_below="@+id/protocoloDescricaoEditText"
        android:layout_alignParentStart="true" />


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        android:layout_below="@+id/enderecoProtocoloLabel"
        android:layout_marginTop="10dp"
        />

    <!--  CEP -->
    <TextView
        android:id="@+id/cepProtocoloLabel"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_protocolo_endereco_cep"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/enderecoProtocoloLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"


        />

    <TextView
        android:layout_width="100dp"
        android:layout_height="@dimen/altura_linha"
        android:ems="10"
        android:id="@+id/cepEditText"
        android:layout_alignTop="@+id/cepProtocoloLabel"
        android:layout_alignBaseline="@+id/cepProtocoloLabel"
        android:layout_alignStart="@+id/numeroEditText"
        android:inputType="number"
        android:hint="@string/hint_cep" />

    <!-- END CEP -->


    <!-- BAIRRO -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/altura_linha"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_protocolo_endereco_bairro"
        android:id="@+id/bairroProtocoloLabel"
        android:layout_below="@+id/cepEditText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/altura_linha"
        android:id="@+id/bairroEditText"
        android:layout_alignTop="@+id/bairroProtocoloLabel"
        android:layout_alignBaseline="@+id/bairroProtocoloLabel"
        android:inputType="text"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/numeroEditText"
        android:hint="@string/hint_bairro" />


    <!--  END BAIRRO -->

    <!--  RUA -->
    <TextView
        android:id="@+id/ruaProtocoloLabel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/altura_linha"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_protocolo_endereco_rua"
        android:labelFor="@+id/ruaEditText"
        android:layout_below="@+id/bairroEditText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/altura_linha"
        android:id="@+id/ruaEditText"
        android:layout_alignTop="@+id/ruaProtocoloLabel"
        android:inputType="text"
        android:layout_alignBaseline="@id/ruaProtocoloLabel"
        android:layout_alignStart="@+id/numeroEditText"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_rua" />

    <!--  END RUA -->


    <!--  NUMERO -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/altura_linha"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_protocolo_endereco_numero"
        android:id="@+id/numeroProtocoloLabel"
        android:layout_below="@+id/ruaEditText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/altura_linha"
        android:id="@+id/numeroEditText"
        android:layout_alignTop="@+id/numeroProtocoloLabel"
        android:layout_toEndOf="@id/numeroProtocoloLabel"
        android:layout_alignBaseline="@+id/numeroProtocoloLabel"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/protocoloEnderecoFieldsMargin"
        android:hint="@string/hint_numero"
        android:inputType="number" />

    <!--  END NUMERO -->


    />
</RelativeLayout>
