<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:columnCount="1"
    android:orientation="vertical"
    android:background="@drawable/cidadeiluminadabg">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@color/branca"
        android:text="@string/label_abrir_novo_protocolo"
        android:gravity="left"
        android:textColor="@color/cinza"
        android:id="@+id/openProtocoloButton"
        android:onClick="openProtocoloActivity"
        android:drawableStart="@drawable/ic_lightbulb_grey600_36dp"
        android:layout_marginTop="60dp"
        android:padding="20dp"
        android:layout_marginBottom="@dimen/mainMenuButtonMargin" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:textColor="@color/cinza"
        android:padding="20dp"
        android:text="@string/label_abrir_lista_protocolos"
        android:background="@color/branca"
        android:id="@+id/openProtocolosListButton"
        android:onClick="openListaProtocolosActivity"
        android:drawableStart="@drawable/ic_format_list_numbers_grey600_36dp"
       android:layout_marginBottom="@dimen/mainMenuButtonMargin"/>

    <Button
        android:layout_width="fill_parent"
<<<<<<< HEAD
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:padding="20dp"
        android:text="@string/label_abrir_configuracoes"
        android:background="@color/branca"
        android:textColor="@color/cinza"
=======
        android:layout_height="0dp"
        android:text="@string/label_abrir_settings"
>>>>>>> 993d8cd9976fb1fc21c453335a00ebdaf0746e52
        android:id="@+id/openSettingsButton"
        android:onClick="openConfiguracoesActivity"
        android:drawableStart="@drawable/ic_settings_grey600_36dp"
        android:layout_marginBottom="@dimen/mainMenuButtonMargin"/>

</LinearLayout>

