<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:ignore="MissingPrefix"
    android:background="@color/branca"
    tools:context="br.com.bilac.tcm.cidadeiluminada2.protocolos.ProtocoloActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <ImageButton
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@color/branca"
            android:id="@+id/openCameraButton"
            android:src="@drawable/camaera_03"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="openProtocoloCamera"
            android:contentDescription="@string/content_description_button_camera" />



        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/protocoloDescricaoEditText"
            android:lines="2"
            android:hint="Descrição da denúncia"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/openCameraButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:linksClickable="false" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_button_protocolo_galeria"
            android:id="@+id/openGalleryButton"
            android:layout_below="@+id/openCameraButton"
            android:layout_alignStart="@+id/openCameraButton"
            android:layout_alignEnd="@+id/openCameraButton"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />


            <!-- RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_below="@+id/protocoloDescricaoEditText"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/frame"
                -->

        <TextView
            fontPath="Roboto/RobotoCondensed-Light.ttf"
            android:layout_below="@+id/protocoloDescricaoEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_protocolo_secao_endereco"
            android:drawableStart="@drawable/ic_map_marker_radius_black_24dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textSize="20dp"
            android:layout_marginTop="18dp"
            android:textAlignment="center"
            android:id="@+id/enderecoProtocoloLabel"
            android:layout_alignParentStart="true" />


             />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/cepEditText"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/enderecoProtocoloLabel"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:inputType="number"
            android:hint=" CEP" />



        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bairroEditText"
            android:layout_alignTop="@+id/bairroProtocoloLabel"
            android:fontFamily="sans-serif-condensed-light"
            android:inputType="text"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/cepEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="Bairro" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ruaEditText"
            android:layout_alignTop="@+id/ruaProtocoloLabel"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_below="@+id/bairroEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/ruaProtocoloLabel"
            android:layout_alignStart="@+id/numeroEditText"
            android:hint="Rua" />



        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numeroEditText"
            android:layout_alignTop="@+id/numeroProtocoloLabel"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/numeroProtocoloLabel"
            android:layout_below="@+id/ruaEditText"
            android:layout_alignParentStart="true"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@+id/numeroProtocoloLabel"
            android:hint="Número"
            android:inputType="number" />


            <Button
            style="?android:attr/buttonStyleSmall"
                android:fontFamily="sans-serif-condensed-light"
            android:layout_width="wrap_content"
            android:background="@color/branca"
            android:layout_height="wrap_content"
            android:text="@string/label_botao_pegar_endereco"
            android:drawableStart="@drawable/ic_crosshairs_gps_grey600_24dp"
            android:onClick="openPlacePicker"
            android:id="@+id/openPlacePickerButton"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@+id/enderecoProtocoloLabel"/>
            </RelativeLayout>

        <!-- /RelativeLayout -->
</ScrollView>
